# chemical-preference-system

./: CMakeLists.txt  LICENSE  README.md  main.cpp
.github/ISSUE_TEMPLATE/: bug_report.md
Libraries/hardware-control/: HardwareControl.cpp  HardwareControl.h  MotorHandler.cpp  MotorHandler.h  ValveHandler.cpp  ValveHandler.h  enums.h
Libraries/socket-server/: Serializer.cpp  Serializer.h  SocketServer.cpp  SocketServer.h
